# juce-cookiecutter-template

./: LICENSE  README.md  TODO.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.__project_slug }}/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  ProjectInfo.h.in  README.md  get_cpm.cmake
{{ cookiecutter.__project_slug }}/src/gui/: AttachedComponent.hpp  PluginEditor.cpp  PluginEditor.h
{{ cookiecutter.__project_slug }}/src/processor/: BaseProcessor.cpp  BaseProcessor.h  Params.h  PluginProcessor.cpp  PluginProcessor.h  Utils.h
